== 0.1.0 2012-06-06

 * Support minitest/unit and minitest/spec.

== 0.0.3 2011-11-17

 * Attempt to fix Syck error on install in gemspec.

== 0.0.2 2011-11-17

 * Fix NoMethodError popping hash constants.
 * Fix method names in README.

== 0.0.1 2011-03-29

 * Hi.