@@ -1,3 +1,7 @@
+== LATEST
+
+ * Methods to set temporary method definitions.
+
 == 0.1.0 2012-06-06
 
  * Support minitest/unit and minitest/spec.
